cont to make uri/rdf aware