@@ -1,29 +1,37 @@
 package at.jku.isse.passiveprocessengine.definition.activeobjects;
 
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-import at.jku.isse.passiveprocessengine.rdfwrapper.RDFInstance;
-import at.jku.isse.passiveprocessengine.core.ProcessContext;
+import org.apache.jena.ontapi.model.OntIndividual;
+
+import at.jku.isse.passiveprocessengine.rdfwrapper.NodeToDomainResolver;
+import at.jku.isse.passiveprocessengine.rdfwrapper.RDFInstanceType;
+import lombok.NonNull;
 import at.jku.isse.passiveprocessengine.definition.ProcessDefinitionError;
-import at.jku.isse.passiveprocessengine.definition.types.DecisionNodeDefinitionType;
+import at.jku.isse.passiveprocessengine.definition.types.DecisionNodeDefinitionType.CoreProperties;;
 
 public class DecisionNodeDefinition extends ProcessDefinitionScopedElement {
 
-	public DecisionNodeDefinition(RDFInstance instance, ProcessContext context) {
-		super(instance, context);
+	public static final String INTER_STEP_MAPPING_INVALID = "InterStepMapping Invalid";
+
+	public enum InFlowType {
+		AND, OR, XOR, SEQ;
+	}
+	
+	public DecisionNodeDefinition(@NonNull OntIndividual element, RDFInstanceType type, @NonNull NodeToDomainResolver resolver) {
+		super(element, type, resolver);
 	}
 
 	public void setInflowType(InFlowType ift) {
-		instance.setSingleProperty(DecisionNodeDefinitionType.CoreProperties.inFlowType.toString(), ift.toString());
+		setSingleProperty(CoreProperties.inFlowType.toString(), ift.toString());
 	}
 
 	public InFlowType getInFlowType() {
-		return InFlowType.valueOf(instance.getTypedProperty(DecisionNodeDefinitionType.CoreProperties.inFlowType.toString(), String.class, InFlowType.AND.toString()));
+		return InFlowType.valueOf(getTypedProperty(CoreProperties.inFlowType.toString(), String.class, InFlowType.AND.toString()));
 	}
 
 
@@ -31,12 +39,12 @@ public class DecisionNodeDefinition extends ProcessDefinitionScopedElement {
 		if (this.getOutSteps().isEmpty())
 			return null;
 		else {
-			RDFInstance dnd = instance.getTypedProperty(DecisionNodeDefinitionType.CoreProperties.closingDN.toString(), RDFInstance.class);
+			DecisionNodeDefinition dnd = getTypedProperty(CoreProperties.closingDN.toString(), DecisionNodeDefinition.class);
 			if (dnd != null)
-				return context.getWrappedInstance(DecisionNodeDefinition.class, dnd);
+				return dnd;
 			else {
 				DecisionNodeDefinition closingDnd = determineScopeClosingDN();
-				instance.setSingleProperty(DecisionNodeDefinitionType.CoreProperties.closingDN.toString(), closingDnd.getInstance());
+				setSingleProperty(CoreProperties.closingDN.toString(), closingDnd.getInstance());
 				return closingDnd;
 			}
 		}
@@ -66,55 +74,55 @@ public class DecisionNodeDefinition extends ProcessDefinitionScopedElement {
 
 	@SuppressWarnings("unchecked")
 	protected void addInStep(StepDefinition sd) {
-		instance.getTypedProperty(DecisionNodeDefinitionType.CoreProperties.inSteps.toString(), Set.class).add(sd.getInstance());
+		getTypedProperty(CoreProperties.inSteps.toString(), Set.class).add(sd.getInstance());
 	}
 
 	@SuppressWarnings("unchecked")
 	protected void addOutStep(StepDefinition sd) {
-		instance.getTypedProperty(DecisionNodeDefinitionType.CoreProperties.outSteps.toString(), Set.class).add(sd.getInstance());
+		getTypedProperty(CoreProperties.outSteps.toString(), Set.class).add(sd.getInstance());
 	}
 
 	@SuppressWarnings("unchecked")
 	public void addDataMappingDefinition(MappingDefinition md) {
-		instance.getTypedProperty(DecisionNodeDefinitionType.CoreProperties.dataMappingDefinitions.toString(), Set.class).add(md.getInstance());
+		getTypedProperty(CoreProperties.dataMappingDefinitions.toString(), Set.class).add(md.getInstance());
 	}
 
 	@SuppressWarnings("unchecked")
 	public Set<MappingDefinition> getMappings() {
-		Set mdSet = instance.getTypedProperty(DecisionNodeDefinitionType.CoreProperties.dataMappingDefinitions.toString(), Set.class);
-		if (mdSet != null ) {
-			return (Set<MappingDefinition>) mdSet.stream()
-					.map(inst -> context.getWrappedInstance(MappingDefinition.class, (RDFInstance) inst))
-					.collect(Collectors.toSet());
-		} else return Collections.emptySet();
+		return (Set<MappingDefinition>) getTypedProperty(CoreProperties.dataMappingDefinitions.toString(), Set.class);
+//		if (mdSet != null ) {
+//			return (Set<MappingDefinition>) mdSet.stream()
+//					.map(inst -> context.getWrappedInstance(MappingDefinition.class, (RDFInstance) inst))
+//					.collect(Collectors.toSet());
+//		} else return Collections.emptySet();
 	}
 
 	@SuppressWarnings("unchecked")
 	public Set<StepDefinition> getInSteps() {
-		return (Set<StepDefinition>) instance.getTypedProperty(DecisionNodeDefinitionType.CoreProperties.inSteps.toString(), Set.class).stream()
-			.filter(RDFInstance.class::isInstance)
-			.map(RDFInstance.class::cast)
-			.map(inst -> context.getWrappedInstance(ProcessDefinition.getMostSpecializedClass((RDFInstance) inst), (RDFInstance) inst))
+		return (Set<StepDefinition>) getTypedProperty(CoreProperties.inSteps.toString(), Set.class).stream()
+//			.filter(RDFInstance.class::isInstance)
+//			.map(RDFInstance.class::cast)
+//			.map(inst -> context.getWrappedInstance(ProcessDefinition.getMostSpecializedClass((RDFInstance) inst), (RDFInstance) inst))
 			.collect(Collectors.toSet());
 	}
 
 	@SuppressWarnings("unchecked")
 	public Set<StepDefinition> getOutSteps() {
-		return (Set<StepDefinition>) instance.getTypedProperty(DecisionNodeDefinitionType.CoreProperties.outSteps.toString(), Set.class).stream()
-			.filter(RDFInstance.class::isInstance)
-			.map(RDFInstance.class::cast)
-			.map(inst -> context.getWrappedInstance(ProcessDefinition.getMostSpecializedClass((RDFInstance) inst), (RDFInstance) inst))
+		return (Set<StepDefinition>) getTypedProperty(CoreProperties.outSteps.toString(), Set.class).stream()
+//			.filter(RDFInstance.class::isInstance)
+//			.map(RDFInstance.class::cast)
+//			.map(inst -> context.getWrappedInstance(ProcessDefinition.getMostSpecializedClass((RDFInstance) inst), (RDFInstance) inst))
 			.collect(Collectors.toSet());
 	}
 
 	public void setDepthIndexRecursive(int indexToSet) {
-		instance.setSingleProperty(DecisionNodeDefinitionType.CoreProperties.hierarchyDepth.toString(), indexToSet);
+		setSingleProperty(CoreProperties.hierarchyDepth.toString(), indexToSet);
 		int newIndex = this.getOutSteps().size() > 1 ? indexToSet +1 : indexToSet; // we only increase the depth when we branch out
 		this.getOutSteps().stream().forEach(step -> step.setDepthIndexRecursive(newIndex));
 	}
 
 	public Integer getDepthIndex() {
-		return instance.getTypedProperty(DecisionNodeDefinitionType.CoreProperties.hierarchyDepth.toString(), Integer.class, -1);
+		return getTypedProperty(CoreProperties.hierarchyDepth.toString(), Integer.class, -1);
 	}
 
 	@Override
@@ -125,10 +133,9 @@ public class DecisionNodeDefinition extends ProcessDefinitionScopedElement {
 	}
 
 	public List<ProcessDefinitionError> checkDecisionNodeStructureValidity() {
-		 List<ProcessDefinitionError> errors = this.getMappings().stream()
+		 return this.getMappings().stream()
 			.flatMap(mapping -> checkResolvable(mapping).stream())
-			.collect(Collectors.toList());
-		return errors;
+			.toList();
 	}
 
 	private List<ProcessDefinitionError> checkResolvable(MappingDefinition mapping) {
@@ -136,43 +143,41 @@ public class DecisionNodeDefinition extends ProcessDefinitionScopedElement {
 		StepDefinition fromStep = this.getProcess().getStepDefinitionByName(mapping.getFromStepType());
 		if (fromStep == null && !this.getProcess().getName().equals(mapping.getFromStepType())) {
 			String reason = String.format("Source Step '%s' is not a known process or process step", mapping.getFromStepType());
-			errors.add(new ProcessDefinitionError(this, "InterStepMapping Invalid", reason, ProcessDefinitionError.Severity.ERROR));
+			errors.add(new ProcessDefinitionError(this, INTER_STEP_MAPPING_INVALID, reason, ProcessDefinitionError.Severity.ERROR));
 		} else {
 			if (fromStep == null) {
 				fromStep = this.getProcess();
 				if (!fromStep.getExpectedInput().containsKey(mapping.getFromParameter())) {
 					String reason = String.format("Source Process '%s' does not have an input property '%s' to be used as source ", mapping.getFromStepType(), mapping.getFromParameter());
-					errors.add(new ProcessDefinitionError(this, "InterStepMapping Invalid", reason, ProcessDefinitionError.Severity.ERROR));
+					errors.add(new ProcessDefinitionError(this, INTER_STEP_MAPPING_INVALID, reason, ProcessDefinitionError.Severity.ERROR));
 				}
 			} else {
 				if (!fromStep.getExpectedOutput().containsKey(mapping.getFromParameter())) {
 					String reason = String.format("Source Step '%s' does not have an output property '%s' to be used as source", mapping.getFromStepType(), mapping.getFromParameter());
-					errors.add(new ProcessDefinitionError(this, "InterStepMapping Invalid", reason, ProcessDefinitionError.Severity.ERROR));
+					errors.add(new ProcessDefinitionError(this, INTER_STEP_MAPPING_INVALID, reason, ProcessDefinitionError.Severity.ERROR));
 				}
 			}
 		}
 		StepDefinition toStep = this.getProcess().getStepDefinitionByName(mapping.getToStepType());
 		if (toStep == null && !this.getProcess().getName().equals(mapping.getToStepType())) {
 			String reason = String.format("Destination Step '%s' is not a known process or process step", mapping.getToStepType());
-			errors.add(new ProcessDefinitionError(this, "InterStepMapping Invalid", reason, ProcessDefinitionError.Severity.ERROR));
+			errors.add(new ProcessDefinitionError(this, INTER_STEP_MAPPING_INVALID, reason, ProcessDefinitionError.Severity.ERROR));
 		} else {
 			if (toStep == null) {
 				toStep = this.getProcess();
 				if (!toStep.getExpectedOutput().containsKey(mapping.getToParameter())) {
 					String reason = String.format("Destination Process '%s' does not have an input property '%s' to be used as destination  ", mapping.getToStepType(), mapping.getToParameter());
-					errors.add(new ProcessDefinitionError(this, "InterStepMapping Invalid", reason, ProcessDefinitionError.Severity.ERROR));
+					errors.add(new ProcessDefinitionError(this, INTER_STEP_MAPPING_INVALID, reason, ProcessDefinitionError.Severity.ERROR));
 				}
 			} else {
 				if (!toStep.getExpectedInput().containsKey(mapping.getToParameter())) {
 					String reason = String.format("Destination Step '%s' does not have an output property '%s' to be used as destination ", mapping.getToStepType(), mapping.getToParameter());
-					errors.add(new ProcessDefinitionError(this, "InterStepMapping Invalid", reason, ProcessDefinitionError.Severity.ERROR));
+					errors.add(new ProcessDefinitionError(this, INTER_STEP_MAPPING_INVALID, reason, ProcessDefinitionError.Severity.ERROR));
 				}
 			}
 		}
 		return errors;
 	}
 
-	public static enum InFlowType {
-		AND, OR, XOR, SEQ;
-	}
+
 }
